--- a/app/src/app/pos/pos.page.html
+++ b/app/src/app/pos/pos.page.html
@@ -1,10 +1,9 @@
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>products</ion-title>
+    <ion-title>pos</ion-title>
   </ion-toolbar>
 </ion-header>
 
